<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_product"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_patien"
            android:icon="@drawable/ic_patient"
            android:title="@string/menu_patient" />
        <item
            android:id="@+id/nav_spent"
            android:icon="@drawable/spent"
            android:title="@string/menu_spent" />
        <item
            android:id="@+id/nav_stoke"
            android:icon="@drawable/stoke"
            android:title="@string/menu_stoke" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/note"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_output"
            android:title="@string/menu_signout" />
    </group>
</menu>